tests/fixtures/invalid/float_lshift_list.py
# Cannot left shift Float and List[int]
x: float = 1.0 << [1, 2, 3]
